--- a/.travis.yml
+++ b/.travis.yml
@@ -17,33 +17,8 @@ cache:
   directories:
     - $HOME/.m2
 
-# Re-use JDK 11 from focal release instead of delaying build with installation
-before_install:
-  # Set prefix of commands used in release
-  #  * -Prelease ensures the core jar ends up JRE 1.6 compatible
-  - mvn_release="./mvnw --batch-mode -s ./.settings.xml -Prelease -nsu -DskipTests"
-
-  # Credentials entered into https://travis-ci.org/github/openzipkin/${REPO}/settings are access
-  # controlled by branch (typically only master). Check to see if a well-known env is available
-  # before attempting to log in.
-  - |
-    if [[ -n "$SONATYPE_USER" ]]; then
-      # allocate commits to CI, not the owner of the deploy key
-      git config user.name "zipkinci"
-      git config user.email "zipkinci+zipkin-dev@googlegroups.com"
-
-      # setup https authentication credentials, used by ./mvnw release:prepare
-      git config credential.helper "store --file=.git/credentials"
-      echo "https://$GH_TOKEN:@github.com" > .git/credentials || travis_terminate 1
-
-      # ensure GPG commands work non-interactively
-      export GPG_TTY=$(tty)
-      # import signing key used for jar files
-      echo ${GPG_SIGNING_KEY} | base64 --decode | gpg --batch --passphrase ${GPG_PASSPHRASE} --import || travis_terminate 1
-    fi
-
 # use a go-offline that properly works with multi-module builds
-install: ${mvn_release} de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+install: ./mvnw --batch-mode de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
 
 # Add deployment jobs. Note: "branch = master" for PRs, this is the base branch name.
 #
@@ -69,14 +44,31 @@ jobs:
           type = push AND env(SONATYPE_USER) IS present
       name: "Deploy a SNAPSHOT or release to Sonatype"
       # travis_wait ensures upload delays don't kill the deployment
-      script: travis_wait ${mvn_release} deploy
-    # Deploy a release when a release trigger and secure variables are available
+      script:
+        # Setup GPG to sign the artifacts uploaded to Sonatype
+        - |
+          # ensure GPG commands work non-interactively
+          export GPG_TTY=$(tty)
+          # import signing key used for jar files
+          echo ${GPG_SIGNING_KEY} | base64 --decode | gpg --batch --passphrase ${GPG_PASSPHRASE} --import || travis_terminate 1
+        # Perform the deployment: travis_wait ensures upload delays don't kill the deployment
+        - travis_wait ./mvnw --batch-mode -s ./.settings.xml -Prelease -nsu -DskipTests deploy
+    # Create a release version when a release trigger and credentials needed for git are available
     - stage: create release
       if: |
           tag =~ ^release-[0-9]+\.[0-9]+\.[0-9]+ AND \
-          type = push AND env(SONATYPE_USER) IS present
-      name: "Create release"
+          type = push AND env(GH_TOKEN) IS present
+      name: "Create release version"
       script:
+        # Configure git as release implies pushing commits and tags
+        - |
+          # Allocate commits to CI, not the owner of the deploy key
+          git config user.name "zipkinci"
+          git config user.email "zipkinci+zipkin-dev@googlegroups.com"
+
+          # Setup https authentication credentials, used by ./mvnw release:prepare
+          git config credential.helper "store --file=.git/credentials"
+          echo "https://$GH_TOKEN:@github.com" > .git/credentials || travis_terminate 1
         # Checkout master, as we release from master, not a tag ref
         - git checkout -B master || travis_terminate 1
         # Ensure no one pushed commits since this release tag as it would fail later commands
@@ -92,9 +84,8 @@ jobs:
         - |
           release_version=$(echo "${TRAVIS_TAG}" | sed 's/^release-//') || travis_terminate 1
           git push origin :"${TRAVIS_TAG}"
-        # Prepare and push release commits. '[skip ci]' ensures Travis doesn't build these commits.
-        # These commits push immediately as time uploading deployments adds git conflict risk.
-        - ${mvn_release} -DreleaseVersion=${release_version} -Darguments=-DskipTests release:prepare
+        # Prepare and push release commits and the version tag (N.N.N), which triggers deployment.
+        - ./mvnw --batch-mode -nsu -DreleaseVersion=${release_version} -Darguments=-DskipTests release:prepare
 
 notifications:
   webhooks:
