switches back to default arch

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Run `travis lint` when changing this file to avoid breaking the build.
 
 # See https://docs.travis-ci.com/user/reference/overview/#for-a-particular-travisyml-configuration
-arch: arm64-graviton2 # in AWS over Graviton2 CPU
+arch: amd64           # Use default architecture
 virt: lxd             # LXD containers where possible as they boot much faster than full VMs
 os: linux             # required for arch different than amd64
 dist: focal           # newest available distribution
