--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,9 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <main.basedir>${project.basedir}</main.basedir>
+
+    <!-- default bytecode version for src/main -->
+    <main.java.version>1.8</main.java.version>
     <main.signature.artifact>java18</main.signature.artifact>
 
     <cassandra-driver-core.version>3.10.2</cassandra-driver-core.version>
@@ -285,10 +288,8 @@
           <version>${maven-compiler-plugin.version}</version>
           <inherited>true</inherited>
           <configuration>
-            <!-- Retrolambda will rewrite lambdas as Java 6 bytecode -->
-            <source>1.8</source>
-            <target>1.8</target>
-            <!-- or die! com.sun.tools.javac.api.JavacTool -->
+            <source>${main.java.version}</source>
+            <target>${main.java.version}</target>
             <fork>true</fork>
             <showWarnings>true</showWarnings>
           </configuration>
@@ -563,11 +564,8 @@
             <version>${maven-compiler-plugin.version}</version>
             <inherited>true</inherited>
             <configuration>
-              <!-- Retrolambda will rewrite lambdas as Java 6 bytecode -->
-              <source>1.8</source>
-              <target>1.8</target>
-              <compilerVersion>1.8</compilerVersion>
-              <!-- or die! com.sun.tools.javac.api.JavacTool -->
+              <source>${main.java.version}</source>
+              <target>${main.java.version}</target>
               <fork>true</fork>
               <showWarnings>true</showWarnings>
             </configuration>
